createMemberInVO API method. (#74)
